--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'">
     <title>Tela Principal</title>
+    <link rel="stylesheet" href="../public/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../public/css/style.css">
 </head>
+
 <body>
-    <h1>Hello World</h1>
-    <h2>Quitutes D`line</h2>
+    <div class="container button">
+        <img src="../public/img/incone-estoque.png" alt="estoque" title="estoque" onclick="estoque()">
+    </div>
+
+    <footer></footer>
+
+    <script src="../public/js/bootstrap.min.js"></script>
+    <script src="renderer.js"></script>
 </body>
+
 </html>
